--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<img class="photo" src="me1.jpg" width="170" height="170" alt="фото">
 		</div>
 
-			<p>Junior QA</p>
+			<p>QA Engineer</p>
 
 			<h2>Обо мне</h2>
 
